Mon Nov  15 10:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c (and others) : Simplify widget grabbing, hopefully
	fixing multiple "can't move" bug

Mon Nov  8 11:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c : Fixed bug with credits

Fri Nov  5 14:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.sql, gtkgame.c, realational.c, database.py :
	Added multiple environments to the realational database

Fri Nov  5 14:08:48 2004  Joseph Heled  <joseph@gnubg.org>

	* eval.c (EvalInitialise): Fix bug with prunning. Order of crash
	and race nets was reversed, So crashed/race prune nets were
	returning garbage.

Thu Nov  4 13:12:07 2004  Joseph Heled  <joseph@gnubg.org>

	* eval.c: Make evals after prunning cubeful. See if it makes a
	difference. Would be nice to offer this as a global option.

Wed Nov 03 20:44:45 2004   Oystein Johansen <oystein@gnubg.org>

	* gtkgame.c (EvalWidget): Fix a copy'n'waste error
	* eval.c: Change 'Tiny' movefilter to 5 candidates.

Wed Nov 03 20:07:45 2004   Oystein Johansen <oystein@gnubg.org>

	* gtkchequer.c (CreateMoveList): Use NULL instead of ""

Wed Nov 03 09:15:45 2004   Oystein Johansen <oystein@gnubg.org>

	* i18n.h: reenter #include "config.h"

Tue Nov 02 22:03:30 2004 CET  Petr Kadlec <mormegil@centrum.cz>

        * gtkprefs.c: Fixed an issue when not using HAVE_LIBXML2

Wed Oct 27 01:20:45 2004   Oystein Johansen <oystein@gnubg.org>
	
	* boards.xml: Add design by Ian Curtis.
	
Wed Oct 27 01:20:45 2004   Oystein Johansen <oystein@gnubg.org>

	* gtktheory.c gtktempmap.c: Two files I missed in the last commit.

Tue Oct 26 21:00:45 2004   Oystein Johansen <oystein@gnubg.org>

	Hate me or love me! I've commited the code that removes the reduced
	searches. (Sorry Nis! Hope it won't cause you any trouble). Hopefully
	I will be able to combine the two reduction methods later.

	* gtkgame.c, eval.c and other files: Add user interface to prune nets
